# rethinking-git

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml
.plans/: checklist plan.md  implementation-plan.md
benches/: fixture_generator.rs
benches/fixtures/: README.md
benches/fixtures/concurrent-conflict/: README.md
benches/fixtures/concurrent-conflict/base/: config.txt
benches/fixtures/concurrent-conflict/incoming/: config.txt
benches/fixtures/concurrent-conflict/line/: config.txt
benches/fixtures/mixed-access/: access-policy.txt
benches/fixtures/mixed-access/public/: README.md
benches/fixtures/mixed-access/restricted/: incident-notes.md
benches/fixtures/public-only/: README.md
benches/fixtures/public-only/src/: lib.rs
benches/fixtures/secret-reference/: README.md
benches/fixtures/secret-reference/config/: production.env
benches/fixtures/security-fix/public/: advisory.md
benches/fixtures/security-fix/restricted/: fix.patch.txt
benches/support/: fixture.rs
crates/rgit-graph/: Cargo.toml
crates/rgit-graph/src/: diff.rs  lib.rs  merge.rs  reachability.rs  tree.rs
crates/rgit-graph/tests/: algorithms.rs
crates/rgit-objects/: Cargo.toml  FORMAT.md
crates/rgit-objects/src/: canonical.rs  decode.rs  extended.rs  fastcdc.rs  id.rs  lib.rs  object.rs  path.rs  types.rs
crates/rgit-objects/tests/: canonical_vectors.rs  extended_vectors.rs  fastcdc_vectors.rs  operation_v1_vectors.rs  schema_validation.rs  schema_vectors.rs  signed_vectors.rs
crates/rgit-objects/tests/vectors/: bootstrap-v0.json  chunk-v0.json  extended-v0.json  fastcdc-v0.json  operation-v1.json  schema-v0.json  signed-v0.json
crates/rgit-store/: Cargo.toml
crates/rgit-store/migrations/: 0001_initial.sql
crates/rgit-store/src/: error.rs  lib.rs  loose.rs  memory.rs  model.rs  platform.rs  sqlite.rs  sqlite_vfs.rs  store.rs
crates/rgit-store/tests/: contracts.rs  sqlite_contracts.rs  sqlite_multi_instance.rs
docs/: access-control.md  benchmarks.md  foundation.md  jj-primitives.md  permissions-and-sync.md  prototype.md  source-control-landscape.md  vision.html
docs/adr/: 0001-canonical-object-encoding.md  0002-hash-algorithm-agility.md  0003-embedded-metadata-database.md  0004-immutable-packs-and-chunks.md  0005-cryptographic-libraries.md  0006-async-runtime.md  0007-rpc-and-transport.md  0008-minimum-supported-rust-version.md  0009-supported-platforms-and-filesystems.md  0010-isolated-overlay-workspace-sessions.md  0011-key-bound-operation-transitions.md  README.md
docs/benchmark-reports/: 0001-hardware.md  0001-milestone-0.md  0001-results.csv
docs/governance/: README.md  milestone-review-template.md  milestone-reviews.md  ownership.md
docs/security/: threat-model.md
scripts/: benchmark.sh  generate-benchmark-fixture.sh  record-benchmark-hardware.sh
spec/: canonical-encoding.md  loose-record.md  objects.md  sqlite-store.md
src/: cli_failure.rs  main.rs
tests/: cli_golden.rs
tests/golden/: conflict_flow.txt  hidden_unsnapshotted_change.txt  populated_line_base.txt  public_flow.txt  security_flow.txt
