[package]
name = "rethinking-git"
version = "0.1.0"
edition = "2021"
description = "A small jj-inspired source control prototype."

[[bin]]
name = "rgit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
uuid = { version = "1.10", features = ["v4"] }
walkdir = "2.5"
