[package]
name = "rethinking-git"
version = "0.1.0"
# The legacy prototype remains edition 2021 until it is extracted; production
# workspace crates inherit edition 2024 below.
edition = "2021"
rust-version.workspace = true
description = "A small jj-inspired source control prototype."
license = "Apache-2.0 OR MIT"

[workspace]
resolver = "3"
members = ["crates/rgit-graph", "crates/rgit-objects", "crates/rgit-store"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
blake3 = "1.8"
data-encoding = "2.9"
hex = "0.4"
libc = "=0.2.186"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
subtle = "2.6"
thiserror = "2.0"
rusqlite = { version = "=0.32.1", features = ["bundled", "backup", "hooks", "limits", "load_extension"] }
unicode-normalization = "0.1"
unicode-casefold = "=0.2.0"

[[bin]]
name = "rgit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.5", features = ["derive"] }
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
uuid = { version = "1.10", features = ["v4"] }
walkdir = "2.5"
