[package]
name = "rgit-objects"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Canonical logical objects and identifiers for RGit"
license.workspace = true

[dependencies]
blake3.workspace = true
data-encoding.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true
unicode-casefold.workspace = true

[dev-dependencies]
serde_json.workspace = true
